разбивка на блоки

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
         <nav class="w-full max-w-5xl pt-10 pb-5 flex flex-wrap justify-between items-center relative z-10">
             <!-- Логотип - теперь используется путь к изображению -->
             <div class="flex items-center mb-4 md:mb-0">
-                <img src="path/to/your/logo.svg" alt="Логотип Red Panda" class="w-24 h-auto mr-2"> <!-- Ширина 24, высота авто -->
+                <img src="/images/red-panda-logo-black.svg" alt="Логотип Red Panda" class="w-24 h-auto mr-2"> <!-- Ширина 24, высота авто -->
             </div>
 
             <!-- Навигационные ссылки -->
