--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/src/assets/images/app/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Panda - Corporate Site</title>
+    <title>Red Panda — Полиграфия</title>
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
   </head>
   <body>
