--- a/index.html
+++ b/index.html
@@ -4,7 +4,32 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/src/assets/images/app/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red Panda — Полиграфия</title>
+    <title>Red Panda — Полиграфия</title> <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Red Panda",
+      "url": "https://ваш-домен.kz",
+      "logo": "https://ваш-домен.kz/src/assets/images/layout/red-panda-logo-black.svg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+7-700-725-77-99",
+        "contactType": "Customer Service",
+        "areaServed": "KZ",
+        "availableLanguage": ["Russian"]
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Шоссе Коргалжын, 6",
+        "addressLocality": "Астана",
+        "addressCountry": "KZ"
+      },
+      "sameAs": [
+        "https://www.instagram.com/redpandakz/",
+        "https://2gis.kz/astana/firm/70000001067520759"
+      ]
+    }
+    </script>
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
   </head>
   <body>
