--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Red Panda - современное полиграфическое агентство в Астане. Предлагаем все виды полиграфических услуг от визиток и брошюр до наружной рекламы. Высокое качество, индивидуальный подход и современные технологии.">
+    <meta name="keywords" content="полиграфия Астана, печать, типография, визитки, брошюры, баннеры, Red Panda, цифровая печать, наружная реклама, дизайн">
     <link rel="icon" href="/src/assets/images/app/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Panda — Полиграфия</title> <script type="application/ld+json">
