--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="description" content="Red Panda - современное полиграфическое агентство в Астане. Предлагаем все виды полиграфических услуг от визиток и брошюр до наружной рекламы. Высокое качество, индивидуальный подход и современные технологии.">
     <meta name="keywords" content="полиграфия Астана, печать, типография, визитки, брошюры, баннеры, Red Panda, цифровая печать, наружная реклама, дизайн">
+    <meta name="google-site-verification" content="Cbm1x6W6uJXwulJLfXSd4_3fnDrqOLPYislBeZBHU3g" />
     <link rel="icon" href="/src/assets/images/app/favicon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Red Panda — Полиграфия</title> <script type="application/ld+json">
     {
       "@context": "https://schema.org",
