--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Red Panda",
-      "url": "https://ваш-домен.kz",
-      "logo": "https://ваш-домен.kz/src/assets/images/layout/red-panda-logo-black.svg",
+      "url": "https://redpanda.web.app/",
+      "logo": "https://redpanda.web.app/src/assets/images/layout/red-panda-logo-black.svg",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+7-700-725-77-99",
