--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Red Panda - современное полиграфическое агентство в Астане. Предлагаем все виды полиграфических услуг от визиток и брошюр до наружной рекламы. Высокое качество, индивидуальный подход и современные технологии.">
-    <meta name="keywords" content="полиграфия Астана, печать, типография, визитки, брошюры, баннеры, Red Panda, цифровая печать, наружная реклама, дизайн">
-    <meta name="google-site-verification" content="Cbm1x6W6uJXwulJLfXSd4_3fnDrqOLPYislBeZBHU3g" />
-    <link rel="icon" href="/src/assets/images/app/favicon.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Red Panda — Полиграфия</title> <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Red Panda",
-      "url": "https://redpanda.web.app/",
-      "logo": "https://redpanda.web.app/src/assets/images/layout/red-panda-logo-black.svg",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+7-700-725-77-99",
-        "contactType": "Customer Service",
-        "areaServed": "KZ",
-        "availableLanguage": ["Russian"]
-      },
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Шоссе Коргалжын, 6",
-        "addressLocality": "Астана",
-        "addressCountry": "KZ"
-      },
-      "sameAs": [
-        "https://www.instagram.com/redpandakz/",
-        "https://2gis.kz/astana/firm/70000001067520759"
-      ]
-    }
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Red Panda - современное полиграфическое агентство в Астане. Предлагаем все виды полиграфических услуг от визиток и брошюр до наружной рекламы. Высокое качество, индивидуальный подход и современные технологии."
+    />
+    <meta
+      name="keywords"
+      content="полиграфия Астана, печать, типография, визитки, брошюры, баннеры, Red Panda, цифровая печать, наружная реклама, дизайн"
+    />
+    <meta
+      name="google-site-verification"
+      content="Cbm1x6W6uJXwulJLfXSd4_3fnDrqOLPYislBeZBHU3g"
+    />
+    <link rel="icon" href="/src/assets/images/app/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
+    <title>Red Panda — Полиграфия</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Red Panda",
+        "url": "https://redpanda.web.app/",
+        "logo": "https://redpanda.web.app/src/assets/images/layout/red-panda-logo-black.svg",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+7-700-725-77-99",
+          "contactType": "Customer Service",
+          "areaServed": "KZ",
+          "availableLanguage": ["Russian"]
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Шоссе Коргалжын, 6",
+          "addressLocality": "Астана",
+          "addressCountry": "KZ"
+        },
+        "sameAs": [
+          "https://www.instagram.com/redpandakz/",
+          "https://2gis.kz/astana/firm/70000001067520759"
+        ]
+      }
     </script>
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
   </head>
